fix css issues regarding nav icon alignment,padding and margin

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,6 +5,7 @@ body {
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Quattrocento', serif;
+    padding-top: 80px;
 }
 
 .bg-font {
